cmake_minimum_required(VERSION 3.24.0 FATAL_ERROR)

# -------------------------------------------------------------
# Start project
# -------------------------------------------------------------
project(pongone)

# -------------------------------------------------------------
# Set global variables
# -------------------------------------------------------------
set(PONGONE_EXE_NAME "pongone")

# -------------------------------------------------------------
# Add subdirectories
# -------------------------------------------------------------
add_subdirectory(src)
